# game_engine

./: .gitignore  imgui.ini
game_engine_core/: CMakeLists.txt
game_engine_core/includes/game_engine_core/: app.hpp  camera.hpp  event.hpp  input.hpp  keys.hpp  window.hpp
game_engine_core/includes/game_engine_core/modules/: UI_module.hpp
game_engine_core/includes/game_engine_core/rendering/OpenGL/: renderer_OpenGL.hpp  shader_program.hpp  vertex_array.hpp  vertex_buffer.hpp
game_engine_core/src/game_engine_core/: app.cpp  camera.cpp  input.cpp  window.cpp
game_engine_core/src/game_engine_core/modules/: UI_module.cpp
game_engine_core/src/game_engine_core/rendering/OpenGL/: renderer_OpenGL.cpp  shader_program.cpp  vertex_array.cpp  vertex_buffer.cpp
game_engine_editor/: CMakeLists.txt
game_engine_editor/src/: main.cpp
